# parconc-examples

./: Sudoku.hs  rpar.hs
kmeans/: ChangeLog.md  GenSamples.hs  KMeansCore.hs  LICENSE  kmeans.cabal  kmeans.hs  stack.yaml
